# rulete

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
src/: adapter.rs  app.rs  main.rs
src/matcher/: circle.rs
src/ui/: color_generator.rs  mod.rs
src/wheel/: ui.rs
