[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
gloo = "0.11.0"
palette = "0.7.6"
gloo-storage = "0.3.0"
gloo-console = "0.3.0"
web-sys = { version = "0.3", features = ["console"] }
yew = { version= "0.21.0", features=["csr"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
